--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
-    "moment": "^2.25.0",
-    "moment-timezone": "^0.5.28",
+    "moment": "2.13.0",
+    "moment-timezone": "0.5.13",
     "register-service-worker": "^1.7.1",
     "twemoji": "^12.1.6",
     "vue": "^2.6.11",
