--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "moment": "2.13.0",
@@ -18,6 +19,7 @@
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vue-tailwind": "^0.4.6",
+    "vuetify": "^2.2.11",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
@@ -37,6 +39,7 @@
     "laravel-mix": "^5.0.4",
     "prettier": "^1.19.1",
     "tailwindcss": "^1.4.2",
+    "vue-cli-plugin-vuetify": "~2.0.5",
     "vue-template-compiler": "^2.6.11"
   }
 }
