--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vue-tailwind": "^0.4.6",
+    "vue-toastification": "^1.6.0",
     "vuetify": "^2.2.11",
+    "vuetify-toast-snackbar": "^0.6.1",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
