--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "vue-toastification": "^1.6.0",
     "vuetify": "^2.2.11",
     "vuetify-toast-snackbar": "^0.6.1",
-    "vuex": "^3.1.3"
+    "vuex": "^3.1.3",
+    "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
