--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "register-service-worker": "^1.7.1",
     "twemoji": "^12.1.6",
     "vue": "^2.6.11",
+    "vue-context": "^5.1.0",
     "vue-router": "^3.1.6",
     "vue-tailwind": "^0.4.6",
     "vue-toastification": "^1.6.0",
